# cookiecutter-python

./: .gitignore  LICENSE  README.md  cookiecutter.json
hooks/: pre_gen_project.py
{{ cookiecutter.project }}/: .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  pyproject.toml
