# build backend
[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools~=65.5.0",
    "wheel~=0.37.1",
]

# project metadata
[project]
name = "{{ cookiecutter.package }}"
maintainers = []
authors = []
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python }}, < 4.0"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: {{ cookiecutter.python }}",
]
dynamic = [
    "version",
    "dependencies",
]

[tool.setuptools.dynamic]
version = { attr = "{{ cookiecutter.package }}.__version__" }
dependencies = { file = "requirements.txt" }

[project.optional-dependencies]
dev = [
    "pre-commit~=3.5.0",
    "pylint~=3.2.7",
]
test = [
    "pytest~=8.3.4",
    "pytest-mock~=3.14.0",
    "pytest-asyncio~=0.24.0",
    "pytest-cov~=5.0.0",
]

# pytest
[tool.pytest.ini_options]
addopts = "--cov"

[tool.coverage.run]
source = ["src"]

# python linter & formatter
[tool.ruff]
select = [
    "F",   # Pyflakes: general linting
    "E",   # PEP 8: style guide enforcement
    "W",   # PEP 8: warnings
    "B",   # flake8-bugbear: bug-prone patterns
    "C",   # flake8-comprehensions: comprehension best practices
    "D",   # flake8-docstrings: PEP 257 docstring conventions
    "I",   # isort: import order enforcement
]

ignore = [
    "E203",  # whitespace before ':' (back compatibility)
    "W503",  # line break before binary operator (black compatibility)
]

line-length = {{ cookiecutter.linelength }}
max-complexity = {{ cookiecutter.mccabe }}

# python formatter | enforce opinionated code style that ruff does not support
[tool.black]
line-length = {{ cookiecutter.linelength }}
target-version = [{{ cookiecutter.python }}]

# python static analysis
[tool.pylint]
max-line-length = {{ cookiecutter.linelength }}
disable = [
    'C0114', # missing-module-docstring
    'C0115', # missing-class-docstring
    'C0116', # missing-function-docstring
    'R1260', # disable mccabe complexity, already checked by ruff
]
